# MyGCPay-CLI

./: Cargo.toml  README.fr_ca.md  README.md  TODO.md
MyGCPay PowerBI/: MyGCPay.pbip
MyGCPay PowerBI/MyGCPay.Report/: .platform  definition.pbir
MyGCPay PowerBI/MyGCPay.Report/definition/pages/: pages.json
MyGCPay PowerBI/MyGCPay.SemanticModel/: .platform  diagramLayout.json
MyGCPay PowerBI/MyGCPay.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
MyGCPay PowerBI/MyGCPay.SemanticModel/definition/cultures/: en-US.tmdl
MyGCPay PowerBI/MyGCPay.SemanticModel/definition/tables/: AllRtn.tmdl  DateTableTemplate_5cf57533-7898-4168-8bbf-f97df0a76898.tmdl  Fact_DeductionBalances.tmdl  Fact_EarningBalances.tmdl  Fact_PaychequeDeductions.tmdl  Fact_PaychequeEarnings.tmdl  Fact_PaychequeOtherEarnings.tmdl  Fact_PaychequeTaxes.tmdl  Fact_TaxBalances.tmdl  LocalDateTable_09764160-78c8-4322-b989-54954aac9387.tmdl  LocalDateTable_0ba6fc3e-b160-46d8-af72-eb4c5915217a.tmdl  LocalDateTable_102bef7f-6cb3-460f-8490-f8bc02cce494.tmdl  (+44 more)
resources/: make-all-icons.ps1
src/: lib.rs  main.rs
src/calendar/: mod.rs  pipsc.rs
src/cli/: global_args.rs  mod.rs
src/cli/calendar/: mod.rs
src/cli/cookie/: mod.rs
src/cli/paycheque/: mod.rs
src/net/: cache_entry.rs  cache_key.rs  client.rs  cookie.rs  execute_cached.rs  maybe_cached.rs  mod.rs
src/paths/: cache.rs  mod.rs
src/paycheque/: cheque_number.rs  mod.rs  paycheque_list_request.rs  paycheque_list_response.rs  paycheque_show_request.rs  paycheque_show_response.rs
tests/: cli_fuzzing.rs
(+19 files in other folders)
